# warp-mediacenter

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PLAYER_PROTOTYPE.md  README.md  Torrent-Api-py  requirements.txt  traktapib.md
flutter_client/: README.md  pubspec.yaml
flutter_client/android/: build.gradle.kts
flutter_client/android/app/: build.gradle.kts
flutter_client/ios/Runner/: Info.plist
flutter_client/ios/Runner.xcodeproj/: project.pbxproj
flutter_client/lib/: main.dart
flutter_client/lib/api/: api_client.dart  catalog_constants.dart
flutter_client/lib/models/: auth.dart  auth.freezed.dart  auth.g.dart  catalog.dart  (+35 more)
flutter_client/linux/: CMakeLists.txt
flutter_client/macos/: Podfile
flutter_client/test/: widget_test.dart
flutter_client/windows/: CMakeLists.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
notebooks/: trakt_integration_demo.ipynb
scripts/: phase6_contract_smoke.py  prepare_tauri_mpv_sidecar.py
warp_mediacenter/: .env  .env.example  warpmc_startup.py
warp_mediacenter/Resources/: webshare_proxies.txt
warp_mediacenter/backend/: __init__.py
warp_mediacenter/cli/: README.md  __init__.py  _utils.py  admin.py  api_server.py  media.py  warp_startup.py
warp_mediacenter/config/: config_paths.json  informationproviderservicesettings.json  proxysettings.json  settings.py
(+221 files in other folders)
