[package]
name = "warp-mediacenter-shell"
version = "0.0.1"
description = "Warp MediaCenter Tauri shell"
authors = ["Warp MediaCenter"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }

[profile.dev]
incremental = true
